# IoTCloudSamples

./: .gitignore  README.md
InterOpProviders/nodered-datatransformer-provider/: package-lock.json  package.json  services.js
IoTCloudUnits/PubSubToCoAP/: README.md  package.json
IoTCloudUnits/RESTtoAMQP/: config.js  index.js  package-lock.json  package.json
IoTCloudUnits/TruckMonitoringService/: README.md
IoTCloudUnits/csvToJson/: README.md  package-lock.json  package.json
IoTCloudUnits/genericalarmgenerator/: README.md  package-lock.json  package.json
IoTCloudUnits/ingestionClient/: README.md  config.sample.yml  index.js  mqttFactory.mjs  package-lock.json  package.json
IoTCloudUnits/mqttkafkabridge/: pom.xml
IoTCloudUnits/port-control-service/: index.js  package-lock.json  package.json
IoTCloudUnits/portAlarmService/: config.js  index.js  package-lock.json  package.json
IoTCloudUnits/portVessel/: config.js  index.js  package-lock.json  package.json
IoTCloudUnits/simplesensor/: package-lock.json  package.json
IoTCloudUnits/testRig/: package-lock.json  package.json
IoTProviders/GenericLightweightIoTProvider/: index.js  package-lock.json  package.json  services.js
MLUnits/BTSPrediction/: README.md
data/: REAME.md
utils/: README.md  package.json  plain_rest.py  plainamqpsubscriber.py  plainmqttpublisher.py  plainmqttsubscriber.js  pyproject.toml  requirements.txt  test_amqp_fanout_json_publish.py  test_amqp_json_publish.py  valenciaport-data-emissionCabins-generator.js  valenciaport-data-json-csv.py
utils/CSVSensorSplit/: README.md  split.py
(+109 files in other folders)
